Stop background repeating on mobiles

--- a/app/assets/stylesheets/custom.css.sass
+++ b/app/assets/stylesheets/custom.css.sass
@@ -53,7 +53,8 @@
 body
   // fallback
   background-color: #B1E7E7
-  background-repeat: repeat-x
+  // height: 100%
+  // margin: 0
   // Safari 4-5, Chrome 1-9
   background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#B1E7E7), to(#fff))
   // Safari 5.1, Chrome 10+
@@ -64,6 +65,8 @@ body
   background: -ms-linear-gradient(top, #fff, #B1E7E7)
   // Opera 11.10+
   background: -o-linear-gradient(top, #fff, #B1E7E7)
+  background-repeat: no-repeat
+  background-attachment: fixed
 
 .body-content
   padding-top: 70px
